--- a/sass/templates/_main-popUp.sass
+++ b/sass/templates/_main-popUp.sass
@@ -16,6 +16,7 @@
         min-height: 8.5rem
         outline: none
         pointer-events: none
+        overflow: hidden
         resize: none
         margin-bottom: 1rem
     &__form
